Changed the filter logic from '&' to '|' Added forms

--- a/Primary_Data_2.ipynb
+++ b/Primary_Data_2.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "578f0af8",
+   "metadata": {},
+   "source": [
+    "# Primary Data Cleaning\n",
+    "## Data source: https://www.kaggle.com/kkhandekar/cheapest-electric-cars\n",
+    "### Main problems: <li> 'PriceinGermany', 'PriceinUK' aren't in numeric format. Converted them into integers. Other examples: 'FastChargeSpeed', 'Range'. </li><li> 'Battery' is inside 'Subtitle. Had to extract it with massive formatting. </li><li> 'PriceinUK' had a few null entries.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "fb1a5e71",
